# newskit

./: LICENSE  Makefile.am  aclocal.m4  autogen.sh  configure.ac  summa.in  testparser.sh
data/: Makefile  Makefile.am  Makefile.in  summa.desktop
src/: Makefile.am  Makefile.in  NewsKit.AtomParser.cs  NewsKit.Core.cs  NewsKit.Exceptions.cs  NewsKit.Globals.cs  NewsKit.IFeedParser.cs  NewsKit.Item.cs  NewsKit.OpmlParser.cs  NewsKit.Parsing.cs  NewsKit.RdfParser.cs  NewsKit.Request.cs  NewsKit.RssCommon.cs  NewsKit.RssParser.cs  NewsKit.TestBed.cs  NewsKit.TestBed.cs.bak  Notifications.Global.cs  Notifications.Notification.cs  Summa.Core.Application.cs  Summa.Core.Config.cs  Summa.Core.DBus.cs  Summa.Core.Database.cs  Summa.Core.EventArgs.cs  Summa.Core.Exceptions.cs  Summa.Core.IBookmarker.cs  Summa.Core.IMediaPlayer.cs  Summa.Core.INotification.cs  Summa.Core.ITheme.cs  Summa.Core.Log.cs  Summa.Core.LogList.cs  Summa.Core.Notifier.cs  Summa.Core.StringCatalog.cs  Summa.Core.ThemeManager.cs  Summa.Core.Updater.cs  Summa.Data.Core.cs  Summa.Data.Feed.cs  Summa.Data.Feeds.cs  Summa.Data.ISource.cs  Summa.Data.Item.cs  Summa.Data.Search.cs  (+28 more)
src/NewsKit/: Makefile.am
src/NewsKit/NewsKit.Dbus/: NKDatabaseApi.cs
src/Summa/: AboutDialog.cs  AddTagDialog.cs  AddWindow.cs  Application.cs  Bookmarker.cs  Browser.cs  Config.cs  ConfigDialog.cs  DeleteConfirmationDialog.cs  DieuBookmarker.cs  Feed.cs  FeedPropertiesDialog.cs  FeedView.cs  Firstrun.cs  GeckoView.cs  Item.cs  ItemView.cs  Makefile.am  NewsKit.cs  OpmlDialog.cs  StatusIcon.cs  Summa.Core.Config.cs  Summa.Core.DBus.cs  Summa.Core.Database.cs  Summa.Core.Exceptions.cs  Summa.Core.Notifier.cs  Summa.Data.Feed.cs  Summa.Data.Item.cs  Summa.Data.Search.cs  Summa.Gui.AboutDialog.cs  Summa.Gui.Actions.cs  Summa.Gui.AddTagDialog.cs  Summa.Gui.ConfigDialog.cs  Summa.Gui.DieuBookmarker.cs  Summa.Gui.GeckoView.cs  Summa.Gui.ItemNotebook.cs  Summa.Gui.ItemView.cs  Summa.Gui.NotificationBar.cs  Summa.Gui.StatusIcon.cs  Summa.Gui.TagView.cs  (+10 more)
src/Summa/Summa.Core/: Application.cs  Bookmarker.cs  Config.cs  DBus.cs  Database.cs  EventArgs.cs  Exceptions.cs  Log.cs  MediaPlayer.cs  Notifier.cs  ThemeManager.cs  Updater.cs  Util.cs
src/Summa/Summa.Data/: Core.cs  Feed.cs  Item.cs  Search.cs
src/Summa/Summa.Data/Summa.Data.Parser/: AtomParser.cs  FeedParser.cs  Item.cs  MigoRfc822DateTime.cs  OpmlParser.cs  RssParser.cs
src/Summa/Summa.Data/Summa.Data.Storage/: Database.cs
src/Summa/Summa.Gui/: AboutDialog.cs  Actions.cs  AddFeedDialog.cs  AddTagDialog.cs  AddWindow.cs  Browser.cs  ConfigDialog.cs  DeleteConfirmationDialog.cs  DieuBookmarker.cs  FeedPropertiesDialog.cs  FeedView.cs  FirstRun.cs  Firstrun.cs  GeckoView.cs  ItemNotebook.cs  ItemView.cs  MessageDialog.cs  NativeBookmarker.cs  NativeTheme.cs  NotificationBar.cs  OpmlDialog.cs  StatusIcon.cs  TagView.cs  TagWindow.cs  TotemMediaPlayer.cs  WebKitView.cs
src/Summa/Summa.Interfaces/: IBookmarker.cs  IDieu.cs  IMediaPlayer.cs  INetworkManager.cs  ISource.cs  ITheme.cs
src/Summa/Summa.Net/: Feed.cs  Request.cs  Util.cs
src/Summa/Summa.Parser/: AtomParser.cs  Item.cs  OpmlParser.cs  RdfParser.cs  RssParser.cs
