AC_INIT(NewsKit, 0.1.0)
AC_CONFIG_SRCDIR([Makefile.am])
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AM_MAINTAINER_MODE

AC_PATH_PROG(MONO, mono)
if test "x$MONO" = "x" ; then
  AC_MSG_ERROR([Can't find "mono" in your PATH])
fi

AC_PATH_PROG(MCS, mcs)
AC_PATH_PROG(GMCS, gmcs)
if test "x$GMCS" != "x" ; then
   MCS=$GMCS
fi

if test "x$MCS" = "x" ; then
  AC_MSG_ERROR([Can't find "mcs" or "gmcs" in your PATH])
fi

dnl Find mono
MONO_REQUIRED_VERSION=1.2.0
GTKSHARP_REQUIRED_VERSION=2.10.0
GNOMESHARP_REQUIRED_VERSION=2.16.0
GCONF_REQUIRED_VERSION=2.4
WEBKITSHARP_REQUIRED_VERSION=1.0
DBUSSHARP_REQUIRED_VERSION=0.3.0

PKG_CHECK_MODULES(BASE_DEPENDENCIES, 
		  mono >= $MONO_REQUIRED_VERSION)

PKG_CHECK_MODULES(SUMMA,
		  gtk-sharp-2.0 >= $GTKSHARP_REQUIRED_VERSION
		  gconf-sharp-2.0 >= $GTKSHARP_REQUIRED_VERSION
		  glade-sharp-2.0 >= $GTKSHARP_REQUIRED_VERSION
		  gnome-sharp-2.0 >= $GNOMESHARP_REQUIRED_VERSION
		  ndesk-dbus-1.0 >= $DBUSSHARP_REQUIRED_VERSION
		  webkit-sharp-1.0 >= $WEBKITSHARP_REQUIRED_VERSION)

AC_CONFIG_FILES([
Makefile
src/Makefile
src/Summa/Makefile
])

AC_OUTPUT
