EXTRA_DIST = \
	$(application_DATA) \
	$(icons_DATA) \
	$(html_DATA)

applicationdir = $(datadir)/applications

most_iconsdir = $(datadir)/icons/hicolor/16x16/status
app_icondir = $(datadir)/icons/hicolor/24x24/apps
lapp_icondir = $(datadir)/icons/hicolor/48x48/apps

application_DATA = \
	summa.desktop

app_icon_DATA = 24x24/summa.png
lapp_icon_DATA = 48x48/summa.png

most_icons_DATA = \
	16x16/feed-item.png \
	16x16/feed-presence.png \
	16x16/tag.png
